src/objects/Organization_Retail_Sales__x.object
<CustomObject>
    <description>Organization_Retail_Sales</description>
    <externalDataSource>SalesAndAssets</externalDataSource>
    <externalName>Organization_Retail_Sales</externalName>
    <fields>
        <fullName>AUM_AUD__c</fullName>
        <description>AUM_AUD</description>
        <externalDeveloperName>AUM_AUD</externalDeveloperName>
        <label>AUM_AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_CAD__c</fullName>
        <description>AUM_CAD</description>
        <externalDeveloperName>AUM_CAD</externalDeveloperName>
        <label>AUM_CAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_EUR__c</fullName>
        <description>AUM_EUR</description>
        <externalDeveloperName>AUM_EUR</externalDeveloperName>
        <label>AUM_EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_GBP__c</fullName>
        <description>AUM_GBP</description>
        <externalDeveloperName>AUM_GBP</externalDeveloperName>
        <label>AUM_GBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_JPY__c</fullName>
        <description>AUM_JPY</description>
        <externalDeveloperName>AUM_JPY</externalDeveloperName>
        <label>AUM_JPY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_SGD__c</fullName>
        <description>AUM_SGD</description>
        <externalDeveloperName>AUM_SGD</externalDeveloperName>
        <label>AUM_SGD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUM_USD__c</fullName>
        <description>AUM_USD</description>
        <externalDeveloperName>AUM_USD</externalDeveloperName>
        <label>AUM_USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultant_MDM_ID__c</fullName>
        <description>Consultant_MDM_ID</description>
        <externalDeveloperName>Consultant_MDM_ID</externalDeveloperName>
        <label>Consultant_MDM_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Salesforce_ID__c</fullName>
        <description>Consultant_Salesforce_ID</description>
        <externalDeveloperName>Consultant_Salesforce_ID</externalDeveloperName>
        <label>Consultant_Salesforce_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Level</description>
        <externalDeveloperName>Level</externalDeveloperName>
        <label>Level</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_MDM_ID__c</fullName>
        <description>Organization_MDM_ID</description>
        <externalDeveloperName>Organization_MDM_ID</externalDeveloperName>
        <label>Organization_MDM_ID</label>
        <length>128</length>
        <referenceTargetField>Account.MDM_ID__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization_Retail_Sales</relationshipLabel>
        <relationshipName>Organization_Retail_Sales</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Organization_Salesforce_ID__c</fullName>
        <description>Organization_Salesforce_ID</description>
        <externalDeveloperName>Organization_Salesforce_ID</externalDeveloperName>
        <label>Organization_Salesforce_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_AUD__c</fullName>
        <description>Prior_Year_Redemptions_AUD</description>
        <externalDeveloperName>Prior_Year_Redemptions_AUD</externalDeveloperName>
        <label>Prior_Year_Redemptions_AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_CAD__c</fullName>
        <description>Prior_Year_Redemptions_CAD</description>
        <externalDeveloperName>Prior_Year_Redemptions_CAD</externalDeveloperName>
        <label>Prior_Year_Redemptions_CAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_EUR__c</fullName>
        <description>Prior_Year_Redemptions_EUR</description>
        <externalDeveloperName>Prior_Year_Redemptions_EUR</externalDeveloperName>
        <label>Prior_Year_Redemptions_EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_GBP__c</fullName>
        <description>Prior_Year_Redemptions_GBP</description>
        <externalDeveloperName>Prior_Year_Redemptions_GBP</externalDeveloperName>
        <label>Prior_Year_Redemptions_GBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_JPY__c</fullName>
        <description>Prior_Year_Redemptions_JPY</description>
        <externalDeveloperName>Prior_Year_Redemptions_JPY</externalDeveloperName>
        <label>Prior_Year_Redemptions_JPY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_SGD__c</fullName>
        <description>Prior_Year_Redemptions_SGD</description>
        <externalDeveloperName>Prior_Year_Redemptions_SGD</externalDeveloperName>
        <label>Prior_Year_Redemptions_SGD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Redemptions_USD__c</fullName>
        <description>Prior_Year_Redemptions_USD</description>
        <externalDeveloperName>Prior_Year_Redemptions_USD</externalDeveloperName>
        <label>Prior_Year_Redemptions_USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_AUD__c</fullName>
        <description>Prior_Year_Sales_AUD</description>
        <externalDeveloperName>Prior_Year_Sales_AUD</externalDeveloperName>
        <label>Prior_Year_Sales_AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_CAD__c</fullName>
        <description>Prior_Year_Sales_CAD</description>
        <externalDeveloperName>Prior_Year_Sales_CAD</externalDeveloperName>
        <label>Prior_Year_Sales_CAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_EUR__c</fullName>
        <description>Prior_Year_Sales_EUR</description>
        <externalDeveloperName>Prior_Year_Sales_EUR</externalDeveloperName>
        <label>Prior_Year_Sales_EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_GBP__c</fullName>
        <description>Prior_Year_Sales_GBP</description>
        <externalDeveloperName>Prior_Year_Sales_GBP</externalDeveloperName>
        <label>Prior_Year_Sales_GBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_JPY__c</fullName>
        <description>Prior_Year_Sales_JPY</description>
        <externalDeveloperName>Prior_Year_Sales_JPY</externalDeveloperName>
        <label>Prior_Year_Sales_JPY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_SGD__c</fullName>
        <description>Prior_Year_Sales_SGD</description>
        <externalDeveloperName>Prior_Year_Sales_SGD</externalDeveloperName>
        <label>Prior_Year_Sales_SGD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Sales_USD__c</fullName>
        <description>Prior_Year_Sales_USD</description>
        <externalDeveloperName>Prior_Year_Sales_USD</externalDeveloperName>
        <label>Prior_Year_Sales_USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Vehicle_Code__c</fullName>
        <description>Product_Vehicle_Code</description>
        <externalDeveloperName>Product_Vehicle_Code</externalDeveloperName>
        <label>Product_Vehicle_Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Vehicle__c</fullName>
        <description>Product_Vehicle</description>
        <externalDeveloperName>Product_Vehicle</externalDeveloperName>
        <label>Product_Vehicle</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REC_ID__c</fullName>
        <description>REC_ID</description>
        <externalDeveloperName>REC_ID</externalDeveloperName>
        <label>REC_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Date__c</fullName>
        <description>Refresh_Date</description>
        <externalDeveloperName>Refresh_Date</externalDeveloperName>
        <label>Refresh_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Share_Class_Code__c</fullName>
        <description>Share_Class_Code</description>
        <externalDeveloperName>Share_Class_Code</externalDeveloperName>
        <label>Share_Class_Code</label>
        <length>128</length>
        <referenceTargetField>Share_Classes__c.Class_Code__c</referenceTargetField>
        <referenceTo>Share_Classes__c</referenceTo>
        <relationshipLabel>Organization_Retail_Sales</relationshipLabel>
        <relationshipName>Organization_Retail_Sales</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>Source_Portfolio_ID__c</fullName>
        <description>Source_Portfolio_ID</description>
        <externalDeveloperName>Source_Portfolio_ID</externalDeveloperName>
        <label>Source_Portfolio_ID</label>
        <length>128</length>
        <referenceTargetField>Product2.Portfolio_Code__c</referenceTargetField>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Organization_Retail_Sales</relationshipLabel>
        <relationshipName>Organization_Retail_Sales</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_AUD__c</fullName>
        <description>YTD_Redemptions_AUD</description>
        <externalDeveloperName>YTD_Redemptions_AUD</externalDeveloperName>
        <label>YTD_Redemptions_AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_CAD__c</fullName>
        <description>YTD_Redemptions_CAD</description>
        <externalDeveloperName>YTD_Redemptions_CAD</externalDeveloperName>
        <label>YTD_Redemptions_CAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_EUR__c</fullName>
        <description>YTD_Redemptions_EUR</description>
        <externalDeveloperName>YTD_Redemptions_EUR</externalDeveloperName>
        <label>YTD_Redemptions_EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_GBP__c</fullName>
        <description>YTD_Redemptions_GBP</description>
        <externalDeveloperName>YTD_Redemptions_GBP</externalDeveloperName>
        <label>YTD_Redemptions_GBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_JPY__c</fullName>
        <description>YTD_Redemptions_JPY</description>
        <externalDeveloperName>YTD_Redemptions_JPY</externalDeveloperName>
        <label>YTD_Redemptions_JPY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_SGD__c</fullName>
        <description>YTD_Redemptions_SGD</description>
        <externalDeveloperName>YTD_Redemptions_SGD</externalDeveloperName>
        <label>YTD_Redemptions_SGD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Redemptions_USD__c</fullName>
        <description>YTD_Redemptions_USD</description>
        <externalDeveloperName>YTD_Redemptions_USD</externalDeveloperName>
        <label>YTD_Redemptions_USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_AUD__c</fullName>
        <description>YTD_Sales_AUD</description>
        <externalDeveloperName>YTD_Sales_AUD</externalDeveloperName>
        <label>YTD_Sales_AUD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_CAD__c</fullName>
        <description>YTD_Sales_CAD</description>
        <externalDeveloperName>YTD_Sales_CAD</externalDeveloperName>
        <label>YTD_Sales_CAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_EUR__c</fullName>
        <description>YTD_Sales_EUR</description>
        <externalDeveloperName>YTD_Sales_EUR</externalDeveloperName>
        <label>YTD_Sales_EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_GBP__c</fullName>
        <description>YTD_Sales_GBP</description>
        <externalDeveloperName>YTD_Sales_GBP</externalDeveloperName>
        <label>YTD_Sales_GBP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_JPY__c</fullName>
        <description>YTD_Sales_JPY</description>
        <externalDeveloperName>YTD_Sales_JPY</externalDeveloperName>
        <label>YTD_Sales_JPY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_SGD__c</fullName>
        <description>YTD_Sales_SGD</description>
        <externalDeveloperName>YTD_Sales_SGD</externalDeveloperName>
        <label>YTD_Sales_SGD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_Sales_USD__c</fullName>
        <description>YTD_Sales_USD</description>
        <externalDeveloperName>YTD_Sales_USD</externalDeveloperName>
        <label>YTD_Sales_USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Organization_Retail_Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AUM_USD__c</columns>
        <columns>Prior_Year_Sales_USD__c</columns>
        <columns>Organization_MDM_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Organization_Retail_Sales</pluralLabel>
</CustomObject>